[package]
name = "rs-ethers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0", features = ["rustls", "ws", "solc"] }
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.116"
eyre = "0.6.11"