[package]
name = "storage_layout_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage-layout-extractor =  { git = "https://github.com/smlxl/storage-layout-extractor", branch = "main" }
hex = "0.4.3"
serde = { version = "1.0.180", features = ["derive"] }
sha3 = "0.10.8"
anyhow = { version = "1.0.72", features = ["backtrace"] }
serde_json = "1.0.104"